Finish project portfolio

--- a/about.html
+++ b/about.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/archive.png">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
+
     <title>Sobre mim</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav class="header_nav">
+            <a class="header_link" href="index.html">Home</a>
+            <a class="header_link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
+
+    <main class="apresentacao">
+        <scetion class="apresentacao_conteudo">
+            <h1 class="titulo_principal">Sobre mim:</h1>
+            <p class="titulo_descricao">Me chamo Victor Oliveira, tenho 22 anos, sou formado em <strong>Ciência da Computação</strong> 
+                pela Centro Universitário de João Pessoa - UNIPÊ, me formei em junho de 2023. Tenho conhecimentos
+                na área de desenvolvimento web, atualmente na parte do <strong>Front-end</strong>, e procuro oportunidades para expandir ainda mais esses conhecimentos
+                atualmente moro na Bahia, no interior.
+            </p>
+        </scetion>
+        <img src="img/foto_cv.JPG" alt="foto do dev">
+    </main>
+
+    <footer class="footer"><img class="icon_footer" src="img/contact_icon.svg" alt="Ícone contato">
+        Contato: (83)98196-1246
+    </footer>
 </body>
+
 </html>
