--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a class="header_link" href="about.html">Sobre mim</a>
         </nav>
     </header>
+
     <main class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="titulo_principal">Victor Oliveira, <strong class="titulo_destaque">Web Developer.</strong></h1>
@@ -46,7 +47,10 @@
         </section>
         <img src="img/foto_cv.JPG" alt="foto do dev">
     </main>
-    <footer class="footer"><img class="icon_footer" src="img/contact_icon.svg" alt="Ícone contato">Contato: (83)98196-1246</footer>
+
+    <footer class="footer"><img class="icon_footer" src="img/contact_icon.svg" alt="Ícone contato">
+        Contato: (83)98196-1246
+    </footer>
 </body>
 
 </html>
