--- a/about.html
+++ b/about.html
@@ -26,8 +26,13 @@
             <p class="titulo_descricao">Me chamo Victor Oliveira, tenho 22 anos, sou formado em <strong>Ciência da Computação</strong> 
                 pela Centro Universitário de João Pessoa - UNIPÊ, me formei em junho de 2023. Tenho conhecimentos
                 na área de desenvolvimento web, atualmente na parte do <strong>Front-end</strong>, e procuro oportunidades para expandir ainda mais esses conhecimentos
-                atualmente moro na Bahia, no interior.
+                atualmente moro na Bahia, no interior. Para saber mais sobre as minhas competências e experiências, acesse meu currículo abaixo:
             </p>
+
+            <a class="button_links" href="cv-VictorAlef.pdf" target="_blank">
+                <img class="icon_class" src="img/cv_icon.svg" alt="Ícone cv">
+                Open CV
+            </a>
         </scetion>
         <img src="img/foto_cv.JPG" alt="foto do dev">
     </main>
