Adding responsiveness and finalizing the project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
         </section>
-        <img src="img/foto_cv.JPG" alt="foto do dev">
+        <img class="apresentacao_img" src="img/foto_cv.JPG" alt="foto do dev">
     </main>
 
     <footer class="footer"><img class="icon_footer" src="img/contact_icon.svg" alt="Ícone contato">
