--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 Open CV
             </a>
         </scetion>
-        <img src="img/foto_cv.JPG" alt="foto do dev">
+        <img class="apresentacao_img" src="img/foto_cv.JPG" alt="foto do dev">
     </main>
 
     <footer class="footer"><img class="icon_footer" src="img/contact_icon.svg" alt="Ícone contato">
