--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="titulo_descricao">Sou desenvolvedor Front-end, com bons conhecimentos em <strong>HTML, CSS,
                     JavaScript e React.</strong>
                 Faço pequenos sites web para praticar e aperfeiçoar os conhecimentos, procuro oportunidade
-                que focada nessa área para ampliar ainda mais as minhas habilidades.
+                que foca nessa área para ampliar ainda mais as minhas habilidades.
             </p>
             <div class="div_links">
                 <h2 class="titulo_secundario">Acesse minhas redes:</h2>
