--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img class="icon_class" src="img/github_icon.svg" alt="Ícone github">
                     GitHub
                 </a>
-                <a class="button_links" href="https://github.com/VictorROliveira-Dev?tab=repositories" target="_blank">
+                <a class="button_links" href="https://www.linkedin.com/in/alef-ramos/" target="_blank">
                     <img class="icon_class" src="img/linkedin_icon.svg" alt="Ícone linkedin">
                     Linkedin
                 </a>
