--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 atualmente moro na Bahia, no interior. Para saber mais sobre as minhas competências e experiências, acesse meu currículo abaixo:
             </p>
 
-            <a class="button_links" href="cv-VictorAlef.pdf" target="_blank">
+            <a class="button_links" href="cv_victor_alef.pdf" download="cv_victor" target="_blank">
                 <img class="icon_class" src="img/cv_icon.svg" alt="Ícone cv">
                 Open CV
             </a>
